@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.15 2004/04/24 22:38:22 snj Exp $
+# $NetBSD: Makefile,v 1.16 2004/10/03 00:18:37 tv Exp $
 #
 
 DISTNAME=	qt-1.44
 PKGNAME=	qt1-1.44
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	x11
 MASTER_SITES=	ftp://ftp.troll.no/qt/source/ \
 		ftp://ftp.fu-berlin.de/unix/X11/gui/Qt/source/
